Changes in Body Section

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,19 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root ng-version="7.2.2">
+
+    <router-outlet></router-outlet>
+
+    <app-root>
+      <router-outlet></router-outlet>
+      <default-routed-component _nghost-c0>...</default-routed-component>
+      <message-banner ng-reflect-show="true" ng-reflect-message="[object Object]">...</message-banner>
+    </app-root>
+
+    <message-banner ng-reflect-show="true" ng-reflect-message="[object Object]">...</message-banner>
+
+  </app-root>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </html>
